Issue #27157: Make only type() itself accept the one-argument form

Patch by Eryk Sun and Emanuel Barry.